--- a/src/main/resources/templates/admin/sys/user/cypher.html
+++ b/src/main/resources/templates/admin/sys/user/cypher.html
@@ -54,7 +54,7 @@
                     advices(data, parent);
                 },
                 error: function (event) {
-                    errors(event);
+                    toError(event);
                 }
             });
         });
