--- a/src/main/resources/templates/admin/sys/user/setRole.html
+++ b/src/main/resources/templates/admin/sys/user/setRole.html
@@ -34,18 +34,7 @@
     dtree.renderSelect({
         elem: "#roleTree",
         url: "/admin/role/tree",
-        dataStyle: "layuiStyle",
-        selectInitVal: 1,
-        width: "100%",
-        method: "post",
-        menubar: true,
-        dataFormat: "list",
-        ficon: ["1", "-1"],
-        response: {
-            statusCode: 0,
-            message: "msg",
-            title: "name"
-        }, done: function (data, obj, first) {
+        done: function (data, obj, first) {
             if (first) {
                 dtree.dataInit("roleTree", $('#roleId').val());
                 dtree.selectVal("roleTree");
@@ -64,7 +53,7 @@
                 advices(data, parent);
             },
             error: function (event) {
-                errors(event);
+                toError(event);
             }
         });
     });
