--- a/src/main/resources/templates/admin/lms/question/edit.html
+++ b/src/main/resources/templates/admin/lms/question/edit.html
@@ -46,7 +46,7 @@
                     advices(data, parent);
                 },
                 error: function (event) {
-                    errors(event);
+                    toError(event);
                 }
             });
         });
