--- a/src/main/resources/templates/admin/sys/resources/edit.html
+++ b/src/main/resources/templates/admin/sys/resources/edit.html
@@ -71,18 +71,7 @@
         dtree.renderSelect({
             elem: "#menuTree",
             url: "/admin/res/tree",
-            dataStyle: "layuiStyle",
-            selectInitVal: 0,
-            width: "100%",
-            method: "post",
-            menubar: true,
-            dataFormat: "list",
-            ficon: ["1", "-1"],
-            response: {
-                statusCode: 0,
-                message: "msg",
-                title: "name"
-            }, done: function (data, obj, first) {
+            done: function (data, obj, first) {
                 if (first) {
                     dtree.dataInit("menuTree", $('#pid').val());
                     dtree.selectVal("menuTree");
@@ -103,7 +92,7 @@
                     advices(data, parent);
                 },
                 error: function (event) {
-                    errors(event);
+                    toError(event);
                 }
             });
         });
