--- a/src/main/resources/templates/admin/sys/role/edit.html
+++ b/src/main/resources/templates/admin/sys/role/edit.html
@@ -48,7 +48,7 @@
                     advices(data, parent);
                 },
                 error: function (event) {
-                    errors(event);
+                    toError(event);
                 }
             });
         });
