--- a/src/main/resources/templates/admin/lms/top/edit.html
+++ b/src/main/resources/templates/admin/lms/top/edit.html
@@ -1,22 +1,46 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:include="include :: head('展示编辑')"></head>
+<head th:include="include :: head('编辑')"></head>
 <body style="background-color:#fff">
 <div class="yadmin-body animated fadeIn">
     <div class="layui-form layui-form-pane">
-        <input type="hidden" name="id" th:value="${top?.id}"/>
+        <input type="hidden" name="id" th:value="${bean?.id}"/>
         <div class="layui-form-item">
-            <label for="name" class="layui-form-label"><span class="yadmin-red">*</span>名称</label>
+            <label for="title" class="layui-form-label"><span class="yadmin-red">*</span>名称</label>
             <div class="layui-input-block">
-                <input type="text" id="name" placeholder="请输入名称，例如：状态标识" name="name" th:value="${top?.name}"
+                <input type="text" id="title" placeholder="请输入名称" name="title" th:value="${bean?.title}"
                        lay-verify="required" lay-vertype="tips" autocomplete="off" class="layui-input"/>
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label for="content" class="layui-form-label"><span class="yadmin-red">*</span>内容</label>
+            <div class="layui-input-block">
+                <textarea id="content" name="content" placeholder="请输入内容" th:text="${bean?.content}"
+                          lay-verify="required" lay-vertype="tips" autocomplete="off" class="layui-textarea"></textarea>
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label for="url" class="layui-form-label">访问地址</label>
+            <div class="layui-input-block">
+                <input type="text" id="url" placeholder="请输入内容" name="url" th:value="${bean?.url}"
+                       autocomplete="off" class="layui-input"/>
             </div>
         </div>
         <div class="layui-form-item">
             <label for="sort" class="layui-form-label">排序</label>
             <div class="layui-input-block">
-                <input type="text" id="sort" placeholder="请输入序号" name="sort" th:value="${top?.sort}" autocomplete="off"
+                <input type="text" id="sort" placeholder="请输入序号" name="sort" th:value="${bean?.sort}" autocomplete="off"
                        class="layui-input">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label for="mold" class="layui-form-label">类型</label>
+            <div class="layui-input-block">
+                <select id="mold" name="mold" lay-verify="required">
+                    <option value="0">请选择</option>
+                    <option value="1">首页推荐</option>
+                    <option value="2">横幅推荐</option>
+                </select>
             </div>
         </div>
         <div class="layui-form-item" pane="">
@@ -35,19 +59,15 @@
 </div>
 <script>
     layui.use(['jquery', 'form', 'layer'], function ($, form, layer) {
+        $('select[name=mold] option[value="[[${bean?.mold}]]"]').prop('selected', true);
+        form.render('select');
+        $('input:radio[name=enabled][value="[[${bean?.enabled}]]"]').prop("checked", true);
+        form.render('radio');
         form.on('submit(submit-form)', function (obj) {
-            $.ajax({
-                type: "POST",
-                url: '/admin/lms/top/save',
-                data: obj.field,
-                dataType: 'json',
-                cache: false,
-                success: function (data) {
-                    advices(data, parent);
-                },
-                error: function (event) {
-                    toError(event);
-                }
+            $.post('/admin/lms/top/save', obj.field, function (data) {
+                advices(data, parent);
+            }, 'json').fail(function (event) {
+                toError(event);
             });
         });
     });
