--- a/src/main/resources/templates/admin/sys/role/edit.html
+++ b/src/main/resources/templates/admin/sys/role/edit.html
@@ -38,18 +38,10 @@
         $('input:radio[name=enabled][value="[[${role?.enabled}]]"]').prop('checked', true);
         form.render('radio');
         form.on('submit(submit-form)', function (obj) {
-            $.ajax({
-                type: "POST",
-                url: '/admin/role/save',
-                data: obj.field,
-                dataType: 'json',
-                cache: false,
-                success: function (data) {
-                    advices(data, parent);
-                },
-                error: function (event) {
-                    toError(event);
-                }
+            $.post('/admin/role/save', obj.field, function (data) {
+                advices(data, parent);
+            }, 'json').fail(function (event) {
+                toError(event);
             });
         });
     });
