--- a/src/main/resources/templates/admin/lms/question/edit.html
+++ b/src/main/resources/templates/admin/lms/question/edit.html
@@ -1,53 +1,101 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:include="include :: head('展示编辑')"></head>
+<head th:include="include :: head('编辑')"></head>
 <body style="background-color:#fff">
 <div class="yadmin-body animated fadeIn">
     <div class="layui-form layui-form-pane">
-        <input type="hidden" name="id" th:value="${top?.id}"/>
+        <input type="hidden" name="id" th:value="${bean?.id}"/>
         <div class="layui-form-item">
-            <label for="name" class="layui-form-label"><span class="yadmin-red">*</span>名称</label>
+            <label for="dTree" class="layui-form-label"><span class="yadmin-red">*</span>答题室</label>
             <div class="layui-input-block">
-                <input type="text" id="name" placeholder="请输入名称，例如：状态标识" name="name" th:value="${top?.name}"
+                <ul id="dTree" class="dtree" data-id="-1" data-value="选择上级名称"></ul>
+                <input type="hidden" id="examRoomId" name="examRoomId" th:value="${bean?.examRoomId}"/>
+                <input type="hidden" id="examRoomName" name="examRoomName" th:value="${bean?.examRoomName}"/>
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label for="content" class="layui-form-label"><span class="yadmin-red">*</span>题目内容</label>
+            <div class="layui-input-block">
+                <input type="text" id="content" placeholder="请输入内容" name="content" th:value="${bean?.content}"
                        lay-verify="required" lay-vertype="tips" autocomplete="off" class="layui-input"/>
             </div>
         </div>
         <div class="layui-form-item">
-            <label for="sort" class="layui-form-label">排序</label>
+            <label for="levels" class="layui-form-label">难度等级</label>
             <div class="layui-input-block">
-                <input type="text" id="sort" placeholder="请输入序号" name="sort" th:value="${top?.sort}" autocomplete="off"
-                       class="layui-input">
+                <input type="text" id="levels" name="difficulty" lay-affix="number" placeholder="难度等级"
+                       step="1" min="1" max="10" th:value="${bean?.difficulty}" class="layui-input"/>
             </div>
         </div>
-        <div class="layui-form-item" pane="">
-            <label class="layui-form-label">状态</label>
+        <div class="layui-form-item">
+            <label for="mold" class="layui-form-label">类型</label>
             <div class="layui-input-block">
-                <input type="radio" name="enabled" value="true" title="正常"/>
-                <input type="radio" name="enabled" value="false" title="冻结" checked/>
+                <select id="mold" name="mold" lay-verify="required">
+                    <option value="0">单选</option>
+                    <option value="1">多选</option>
+                    <option value="2">判断</option>
+                </select>
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label for="share" class="layui-form-label">类型</label>
+            <div class="layui-input-block">
+                <select id="share" name="share" lay-verify="required">
+                    <option value="false">私有</option>
+                    <option value="true">公开</option>
+                </select>
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label for="enabled" class="layui-form-label">类型</label>
+            <div class="layui-input-block">
+                <select id="enabled" name="enabled" lay-verify="required">
+                    <option value="false">冻结</option>
+                    <option value="true">正常</option>
+                </select>
             </div>
         </div>
         <div class="layui-form-item">
             <div class="layui-input-block layui-align">
-                <button class="layui-btn layui-btn-normal btn-w100" lay-submit="" lay-filter="submit-form">保存</button>
+                <button class="layui-btn layui-btn-normal btn-w100" lay-submit lay-filter="submit-form">保存</button>
             </div>
         </div>
     </div>
 </div>
 <script>
-    layui.use(['jquery', 'form', 'layer'], function ($, form, layer) {
-        form.on('submit(submit-form)', function (obj) {
-            $.ajax({
-                type: "POST",
-                url: '/admin/lms/top/save',
-                data: obj.field,
-                dataType: 'json',
-                cache: false,
-                success: function (data) {
-                    advices(data, parent);
-                },
-                error: function (event) {
-                    toError(event);
+    layui.use(['jquery', 'form', 'dtree'], function ($, form, dtree) {
+        $('select[name=mold] option[value="[[${bean?.mold}]]"]').prop('selected', true);
+        $('select[name=share] option[value="[[${bean?.share}]]"]').prop('selected', true);
+        $('select[name=enabled] option[value="[[${bean?.enabled}]]"]').prop('selected', true);
+        form.render('select');
+
+        dtree.on("node('dTree')", function (obj) {
+            let tId = $('#examRoomId'), tName = $('#examRoomName');
+            if (tId.val() === obj.param.nodeId) {
+                tId.val('');
+                tName.val('');
+                $("input[dtree-id='pid']").val('请选择');
+            } else {
+                tId.val(obj.param.nodeId)
+                tName.val(obj.param.context)
+            }
+        });
+
+        dtree.renderSelect({
+            elem: "#dTree",
+            url: "/admin/room/tree",
+            done: function (data, obj, first) {
+                if (first) {
+                    dtree.dataInit("dTree", $('#examRoomId').val());
+                    dtree.selectVal("dTree");
                 }
+            }
+        });
+        form.on('submit(submit-form)', function (obj) {
+            $.post('/admin/lms/question/save', obj.field, function (data) {
+                advices(data, parent);
+            }, 'json').fail(function (event) {
+                toError(event);
             });
         });
     });
