--- a/src/main/resources/templates/admin/lms/question/material.html
+++ b/src/main/resources/templates/admin/lms/question/material.html
@@ -58,18 +58,10 @@
         });
 
         form.on('submit(submit-form)', function (obj) {
-            $.ajax({
-                type: "POST",
-                url: '/admin/lms/question/material/save',
-                data: obj.field,
-                dataType: 'json',
-                cache: false,
-                success: function (data) {
-                    advices(data, parent);
-                },
-                error: function (event) {
-                    toError(event);
-                }
+            $.post('/admin/lms/question/material/save', obj.field, function (data) {
+                advices(data, parent);
+            }, 'json').fail(function (event) {
+                toError(event);
             });
         });
     });
