--- a/src/main/resources/templates/admin/sys/user/setRole.html
+++ b/src/main/resources/templates/admin/sys/user/setRole.html
@@ -43,18 +43,10 @@
     });
     
     form.on('submit(submit-form)', function (obj) {
-        $.ajax({
-            type: "POST",
-            url: '/admin/user/authRole',
-            data: obj.field,
-            dataType: 'json',
-            cache: false,
-            success: function (data) {
-                advices(data, parent);
-            },
-            error: function (event) {
-                toError(event);
-            }
+        $.post('/admin/user/authRole', obj.field, function (data) {
+            advices(data, parent);
+        }, 'json').fail(function (event) {
+            toError(event);
         });
     });
 });
