--- a/src/main/resources/templates/front/rooms.html
+++ b/src/main/resources/templates/front/rooms.html
@@ -4,12 +4,12 @@
 <link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
 <body>
 <div th:include="include :: f_header"></div>
-<div class="layui-container" style="margin-bottom: 40px;">
+<div class="layui-container layui-fluid">
     <div class="layui-row layui-card">
         <div class="layui-card-header" style="background-color: #E2E2E2">分类筛选</div>
         <div class="layui-card-body layui-form">
             <div class="layui-form-item">
-                <label class="layui-form-label">区域：</label>
+                <label class="layui-form-label">科目分类：</label>
                 <div class="layui-input-block">
                     <span class="filter-tag active">全部</span>
                     <span class="filter-tag">美国</span>
@@ -23,40 +23,22 @@
             </div>
 
             <div class="layui-form-item">
-                <label class="layui-form-label">类型：</label>
+                <label class="layui-form-label">答卷模式：</label>
                 <div class="layui-input-block">
                     <span class="filter-tag active">全部</span>
-                    <span class="filter-tag">喜剧</span>
-                    <span class="filter-tag">爱情</span>
-                    <span class="filter-tag">动作</span>
-                    <span class="filter-tag">科幻</span>
-                    <span class="filter-tag">悬疑</span>
-                    <span class="filter-tag">剧情</span>
-                    <span class="filter-tag">犯罪</span>
-                    <span class="filter-tag">惊悚</span>
+                    <span class="filter-tag">标准答题模式</span>
+                    <span class="filter-tag">随机抽取模式</span>
+                    <span class="filter-tag">习题练习模式</span>
+                    <span class="filter-tag">只读学习模式</span>
                 </div>
             </div>
 
             <div class="layui-form-item">
-                <label class="layui-form-label">年份：</label>
+                <label class="layui-form-label">成绩类型：</label>
                 <div class="layui-input-block">
-                    <span class="filter-tag active">全部</span>
-                    <span class="filter-tag">2025</span>
-                    <span class="filter-tag">2024</span>
-                    <span class="filter-tag">2023</span>
-                    <span class="filter-tag">2022</span>
-                    <span class="filter-tag">2021</span>
-                    <span class="filter-tag">2020</span>
-                    <span class="filter-tag">2019</span>
-                </div>
-            </div>
-
-            <div class="layui-form-item">
-                <label class="layui-form-label">排序：</label>
-                <div class="layui-input-block">
-                    <span class="filter-tag active">最热</span>
-                    <span class="filter-tag">最新</span>
-                    <span class="filter-tag">好评</span>
+                    <span class="filter-tag active">得分&答案</span>
+                    <span class="filter-tag">得分</span>
+                    <span class="filter-tag">答案</span>
                 </div>
             </div>
         </div>
